# webnn-graph

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  publish.yml
docs/: dynamic-dimensions-guide.md  index.html  onnx-lowering.md  t5-conversion.md
examples/: README.md  browser_example.html  buildGraph.js  build_example.sh  resnet_head.manifest.json  resnet_head.webnn  weights.manifest.json
examples/tensors/: W.meta.json  b.meta.json
src/: ast.rs  debug.rs  emit_js.rs  html_template.html  lib.rs  main.rs  parser.rs  protos.rs  serialize.rs  validate.rs  weights.rs  weights_io.rs  wg.pest
src/onnx/: constant_folding.rs  convert.rs  mod.rs  shape_inference.rs
src/onnx/constant_folding/evaluators/: concat.rs  constant.rs  constant_of_shape.rs  gather.rs  mod.rs  range.rs  reshape_ops.rs  shape.rs
src/onnx/ops/: activation.rs  comparison.rs  conditional.rs  conversion.rs  elementwise.rs  matmul.rs  mod.rs  normalization.rs  reduction.rs  reshape.rs  scatter.rs  utility.rs
