[package]
name = "webnn-graph"
version = "0.1.0"
edition = "2021"
license = "APL-2.0"

[lib]
name = "webnn_graph"
path = "src/lib.rs"

[[bin]]
name = "webnn-graph"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
pest = "2.7"
pest_derive = "2.7"
clap = { version = "4.5", features = ["derive"] }
